fix spacing

--- a/src/modules/landingV3/Componets/HeroV2/styles.module.scss
+++ b/src/modules/landingV3/Componets/HeroV2/styles.module.scss
@@ -4,6 +4,7 @@
   min-height: 100vh;
   background: #f9f9f9;
   padding-bottom: 80px;
+  padding-top: 80px;
 
 }
 
